engine/include/EngineWrapper.h

//
// Forward Declarations for DLL Exports
//

typedef void (*ListenerCallback)(const char* jsonCall);
    int init_haxe();
    __declspec(dllexport) 
    bool get_window_class(wchar_t* className, size_t size);
    void init_window();
    void init_local_window(HWND hWnd);
    void start_loop();
    bool update(int numEvents);
    void set_external_com_listener(ListenerCallback listener);
    void call_external(const char* jsonCall);
    void exit_haxe(int result);